--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,11 +1,12 @@
 {% if latest_demos %}
-{% for demo in latest_demos %}
-<p>
-<h2><a href="/demo/{{ demo.id }}/">{{ demo.title }}</a></h2>
-<h4>{{demo.adress}}</h4>
-<h4>{{demo.organizer}}</h4>
-</p>
-{% endfor %}
+    {% for demo in latest_demos %}
+    <p>
+        <h2><a href="/demo/{{ demo.id }}/">{{ demo.title }}</a></h2>
+        <h3>{{demo.adress}} - von {{demo.organizer}}</h3>
+        <h4>{{demo.starting_time}} -{{demo.ending_time}}</h4>
+        <h6>{{demo.description}}</h6>
+    </p>
+    {% endfor %}
 {% else %}
-<p>No polls are available.</p>
+    <p>No polls are available.</p>
 {% endif %}
