--- a/templates/main/search.html
+++ b/templates/main/search.html
@@ -5,13 +5,13 @@
       <input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search">
 </form>
 
-{% if latest_demos %}
-    {% for demo in latest_demos %}
+{% if results %}
+    {% for result in results %}
     <p>
-        <h2><a href="/demo/{{ demo.id }}/">{{ demo.title }}</a></h2>
-        <h3>{{demo.adress}} - von {{demo.organizer}}</h3>
-        <h4>{{demo.starting_time}} -{{demo.ending_time}}</h4>
-        <h6>{{demo.description}}</h6>
+        <h2><a href="/demo/{{ result.id }}/">{{ result.title }}</a></h2>
+        <h3>{{result.adress}} - von {{result.organizer}}</h3>
+        <h4>{{result.starting_time}} -{{result.ending_time}}</h4>
+        <h6>{{result.description}}</h6>
     </p>
     {% endfor %}
 {% else %}
