--- a/templates/main/search.html
+++ b/templates/main/search.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
 <form id="searchform" action="{% url 'search' %}" method="get" accept-charset="utf-8">
       <button class="searchbutton" type="submit">
         <i class="fa fa-search"></i>
@@ -12,8 +20,11 @@
         <h3>{{result.adress}} - von {{result.organizer}}</h3>
         <h4>{{result.starting_time}} -{{result.ending_time}}</h4>
         <h6>{{result.description}}</h6>
-    </p>
+
     {% endfor %}
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+</body>
+</html>
