--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,32 +1,303 @@
-
 <!DOCTYPE html>
-<html lang="de">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <!-- Standard Meta -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+  <!-- Site Properties -->
+  <title>Homepage - ProtestHub</title>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css">
+
+  <style type="text/css">
+    .hidden.menu {
+      display: none;
+    }
+
+    .masthead.segment {
+      min-height: 500px;
+      padding: 1em 0em;
+    }
+    .masthead .logo.item img {
+      margin-right: 1em;
+    }
+    .masthead .ui.menu .ui.button {
+      margin-left: 0.5em;
+    }
+    .masthead h1.ui.header {
+      margin-top: 2em;
+      margin-bottom: 0em;
+      font-size: 4em;
+      font-weight: normal;
+    }
+    .masthead h2 {
+      font-size: 1.7em;
+      font-weight: normal;
+    }
+
+    .ui.vertical.stripe {
+      padding: 8em 0em;
+    }
+    .ui.vertical.stripe h3 {
+      font-size: 2em;
+    }
+    .ui.vertical.stripe .button + h3,
+    .ui.vertical.stripe p + h3 {
+      margin-top: 3em;
+    }
+    .ui.vertical.stripe .floated.image {
+      clear: both;
+    }
+    .ui.vertical.stripe p {
+      font-size: 1.33em;
+    }
+    .ui.vertical.stripe .horizontal.divider {
+      margin: 3em 0em;
+    }
+
+    .quote.stripe.segment {
+      padding: 0em;
+    }
+    .quote.stripe.segment .grid .column {
+      padding-top: 5em;
+      padding-bottom: 5em;
+    }
+
+    .footer.segment {
+      padding: 5em 0em;
+    }
+
+    .secondary.pointing.menu .toc.item {
+      display: none;
+    }
+
+    @media only screen and (max-width: 700px) {
+      .ui.fixed.menu {
+        display: none !important;
+      }
+      .secondary.pointing.menu .item,
+      .secondary.pointing.menu .menu {
+        display: none;
+      }
+      .secondary.pointing.menu .toc.item {
+        display: block;
+      }
+      .masthead.segment {
+        min-height: 350px;
+      }
+      .masthead h1.ui.header {
+        font-size: 2em;
+        margin-top: 1.5em;
+      }
+      .masthead h2 {
+        margin-top: 0.5em;
+        font-size: 1.5em;
+      }
+    }
+  </style>
+
 </head>
+
 <body>
+  <!-- Following Menu -->
+  <div class="ui large top fixed hidden menu">
+    <div class="ui container">
+      <a class="active item">ProtestHub</a>
+      <a class="item">Work</a>
+      <a class="item">Company</a>
+      <a class="item">Careers</a>
+      <div class="right menu">
+        <div class="item">
+          <form action="{% url 'search' %}" method="get" accept-charset="utf-8">
+            <div class="ui inverted icon input">
+              <input name="q" type="text" placeholder="Search...">
+              <i class="search link icon"></i>
+            </div>
+          </form>
+        </div>
+        <div class="item">
+          <a class="ui button">Log in</a>
+        </div>
+        <div class="item">
+          <a class="ui primary button">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <!-- Sidebar Menu -->
+  <div class="ui vertical inverted sidebar menu">
+    <a class="active item">ProtestHub</a>
+    <a class="item">Login</a>
+    <a class="item">Signup</a>
+  </div>
 
-<form id="searchform" action="{% url 'search' %}" method="get" accept-charset="utf-8">
-      <button class="searchbutton" type="submit">
-        <i class="fa fa-search"></i>
-      </button>
-      <input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search">
-</form>
+  <!-- Page Contents -->
+  <div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment">
+      <div class="ui container">
+        <div class="ui secondary large inverted pointing menu">
+          <a class="toc item">
+            <i class="sidebar icon"></i>
+          </a>
+          <a class="active item">ProtestHub</a>
+          <a class="item">Featured</a>
+          <a class="item">Blog</a>
+          <div class="right item">
+            <form action="{% url 'search' %}" method="get" accept-charset="utf-8">
+              <div class="ui inverted icon input">
+                <input name="q" type="text" placeholder="Search...">
+                <i class="search link icon"></i>
+              </div>
+            </form>
+            <a class="ui inverted center aligned button">Log in</a>
+            <a class="ui inverted center aligned button">Sign Up</a>
+          </div>
+        </div>
+      </div>
 
-{% if latest_demos %}
-    {% for demo in latest_demos %}
-    <p>
-        <h2><a href="/demo/{{ demo.id }}/">{{ demo.title }}</a></h2>
-        <h3>{{demo.adress}} - von {{demo.organizer}}</h3>
-        <h4>{{demo.starting_time}} -{{demo.ending_time}}</h4>
-        <h6>{{demo.description}}</h6>
+      <div class="ui container">
+        <h1 class="ui inverted header">
+          The real world is calling
+        </h1>
+        <h2>
+          Join a local group to meet people, try something new, or protest for what you love.
+        </h2>
 
-    {% endfor %}
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+    <div class="ui inverted form">
+      <div class="three fields">
+        <div class="field">
+          <label>Looking for</label>
+          <input type="text" placeholder="Event">
+        </div>
+        <div class="field">
+          <label>In</label>
+          <input type="text" placeholder="Düsseldorf">
+        </div>
+          <div class="field">
+            <label>On</label>
+              <div class="ui selection dropdown">
+                <input type="hidden" name="gender">
+                <i class="dropdown icon"></i>
+                <div class="default text">Bevorstehend</div>
+                <div class="menu">
+                  <div class="item" data-value="today">Heute</div>
+                  <div class="item" data-value="this_week">Diese Woche</div>
+                  <div class="item" data-value="next_week">Nächste Woche</div>
+                  <div class="item" data-value="this_month">Diesen Monat</div>
+                  <div class="item" data-value="next_month">Nächsten Monat</div>
+                  <div class="item" data-value="upcoming">Bevorstehend</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <button class="ui huge compact icon submit button">
+          <i class="search icon"></i>
+        </button>
+      </div>
+    </div>
+  </div>
 
+  <br>
+
+  <div class="ui three column centered grid">
+    <div class="three wide column"></div>
+    <div class="ten wide column">
+      <a class="ui green label">Fridays For Future</a>
+      <a class="ui blue label">Save The Internet</a>
+    </div>
+    <div class="three wide column"></div>
+  </div>
+
+  <div class="ui divider"></div>
+
+  <div class="ui three column centered grid">
+    <div class="two wide column"></div>
+      <div class="twelve wide column">
+        <div class="ui cards">
+
+          {% if latest_demos %}
+            {% for demo in latest_demos %}
+              <div class="card">
+                <div class="content">
+                <a class="header" href="/demo/{{ demo.id }}/">{{ demo.title }}</a>
+                <div class="meta">
+                  <span>{{demo.adress}}:</span>
+                  <span>{{demo.starting_time}}</span>
+                </div>
+                <div class="description">
+                  {{demo.description}}
+                </div>
+                </div>
+              </div>
+            {% endfor %}
+          {% endif %}
+
+        </div>
+      </div>
+    </div>
+
+    <br>
+  </div>
+
+  <div class="ui inverted vertical footer segment">
+    <div class="ui container">
+      <div class="ui stackable inverted divided equal height stackable grid">
+        <div class="three wide column">
+          <h4 class="ui inverted header">About</h4>
+          <div class="ui inverted link list">
+            <a href="#" class="item">Contact Us</a>
+            <a href="#" class="item">Impressum</a>
+            <a href="#" class="item">Datenschutzerklärung</a>
+          </div>
+        </div>
+        <div class="three wide column">
+          <h4 class="ui inverted header">Services</h4>
+          <div class="ui inverted link list">
+            <a href="#" class="item">FAQ</a>
+          </div>
+        </div>
+        <div class="seven wide column">
+          <h4 class="ui inverted header">Footer Header</h4>
+          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js"></script>
+  <script>
+  $(document)
+    .ready(function() {
+
+      // fix menu when passed
+      $('.masthead')
+        .visibility({
+          once: false,
+          onBottomPassed: function() {
+            $('.fixed.menu').transition('fade in');
+          },
+          onBottomPassedReverse: function() {
+            $('.fixed.menu').transition('fade out');
+          }
+        })
+      ;
+
+      // create sidebar and attach to menu open
+      $('.ui.sidebar')
+        .sidebar('attach events', '.toc.item')
+      ;
+
+      $('.selection.dropdown')
+        .dropdown()
+      ;
+
+    })
+  ;
+  </script>
 </body>
+
 </html>
