--- a/main/templates/users/sign_up.html
+++ b/main/templates/users/sign_up.html
@@ -3,63 +3,69 @@
 {% block content %}
 
 <div class="ui middle aligned grid">
-  <div class="six wide column"></div>
-  <div class="four wide column">
-    <h2 class="ui center aligned header">
-      <div class="content">
-        Join ProtestHub
-      </div>
-    </h2>
-    <form class="ui large form">
-      <div class="ui stacked segment">
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <input type="text" name="username" placeholder="Username">
-          </div>
+    <div class="six wide column"></div>
+    <div class="four wide column">
+        <h2 class="ui center aligned header">
+            <div class="content">
+                Join ProtestHub
+            </div>
+        </h2>
+        <form class="ui large form" action="{% url 'users:sign_up' %}" method="post">
+            {% csrf_token %}
+
+            <div class="ui stacked segment">
+                <div class="field {{ form.username.errors|yesno:'error,,' }}">
+                    <div class="ui left icon input">
+                        <i class="user icon"></i>
+                        {{ form.username }}
+                    </div>
+                    {{ form.username.errors }}
+                </div>
+
+                <div class="field {{ form.email.errors|yesno:'error,,' }}">
+                    <div class="ui left icon input">
+                        <i class="user icon"></i>
+                        {{ form.email }}
+                    </div>
+                    {{ form.email.errors }}
+                </div>
+
+                <div class="field {{ form.password.errors|yesno:'error,,' }}">
+                    <div class="ui left icon input">
+                        <i class="lock icon"></i>
+                        {{ form.password }}
+                    </div>
+                    {{ form.password.errors }}
+                </div>
+
+                <div class="field {{ form.terms_of_use.errors|yesno:'error,,' }}">
+                    <div class="ui checkbox">
+                        {{ form.terms_of_use }}
+                        <label>I accept the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></label>
+                    </div>
+                    {{ form.terms_of_use.errors }}
+                </div>
+
+                <div class="field">
+                    <div class="ui checkbox">
+                        {{ form.newsletter }}
+                        <label>I'd like to receive updates via email about ProtestHub.</label>
+                    </div>
+                </div>
+
+                <button class="ui fluid large green submit button" type="submit">Sign Up</button>
+
+            </div>
+
+            <div class="ui error message"></div>
+
+        </form>
+
+        <div class="ui message">
+            Already signed up? <a href="#">Log In</a>
         </div>
-
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <input type="text" name="email" placeholder="E-mail address">
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>I accept the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></label>
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>I'd like to receive updates via email about ProtestHub.</label>
-          </div>
-        </div>
-
-        <div class="ui fluid large green submit button">Sign Up</div>
-
-      </div>
-
-      <div class="ui error message"></div>
-
-    </form>
-
-    <div class="ui message">
-      Already signed up? <a href="#">Log In</a>
     </div>
-  </div>
-  <div class="six wide column"></div>
+    <div class="six wide column"></div>
 </div>
 {% endblock content %}
 
@@ -72,5 +78,6 @@ $(document)
     ;
   })
 ;
+
 </script>
 {% endblock script %}
