--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,12 +32,18 @@
                     </div>
                 </form>
             </div>
-            <div class="item">
-                <a class="ui button">Log in</a>
-            </div>
-            <div class="item">
-                <a class="ui primary button" href="{% url 'users:sign_up' %}">Sign Up</a>
-            </div>
+            {% if user.is_authenticated %}
+                <div class="item">
+                    <a class="ui basic button" href="{% url 'users:sign_out' %}">Sign out</a>
+                </div>
+            {% else %}
+                <div class="item">
+                    <a class="ui basic button" href="{% url 'users:sign_in' %}">Sign in</a>
+                </div>
+                <div class="item">
+                    <a class="ui button" href="{% url 'users:sign_up' %}">Sign Up</a>
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -45,8 +51,12 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
     <a class="active item" href="{% url 'index' %}">ProtestHub</a>
-    <a class="item">Login</a>
-    <a class="item" href="{% url 'users:sign_up' %}">Signup</a>
+    {% if user.is_authenticated %}
+        <a class="item" href="{% url 'users:sign_out' %}">Sign Out</a>
+    {% else %}
+        <a class="item" href="{% url 'users:sign_in' %}">Sign In</a>
+        <a class="item" href="{% url 'users:sign_up' %}">Sign Up</a>
+    {% endif %}
 </div>
 
 <!-- Page Contents -->
@@ -67,8 +77,12 @@
                             <i class="search link icon"></i>
                         </div>
                     </form>
-                    <a class="ui inverted center aligned button">Log in</a>
-                    <a class="ui inverted center aligned button" href="{% url 'users:sign_up' %}">Sign Up</a>
+                    {% if user.is_authenticated %}
+                        <a class="ui basic inverted center aligned button" href="{% url 'users:sign_out' %}">Sign Out</a>
+                    {% else %}
+                        <a class="ui basic inverted center aligned button" href="{% url 'users:sign_in' %}">Sign in</a>
+                        <a class="ui inverted center aligned button" href="{% url 'users:sign_up' %}">Sign Up</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
